@@ -54,7 +54,7 @@ class MigrateHelper
      */
     public function createSchemaFromSqlfile(): bool
     {
-        if (!\is_file($this->fileSql)) {
+        if (!\file_exists($this->fileSql)) {
             \xoops_error('Error: Sql file not found!');
             return false;
         }
@@ -99,31 +99,33 @@ class MigrateHelper
                 $tables[$tableName]['options'] = '';
                 $tables[$tableName]['columns'] = [];
                 $tables[$tableName]['keys'] = [];
-            } else if (false == $skip) {
-                if (')' === \mb_strtoupper(\substr($line, 0, 1))) {
-                    // end of table definition
-                    // get options
-                    $this->getOptions($line, $options);
-                    $tables[$tableName]['options'] = $options;
-                } elseif ('ENGINE' === \mb_strtoupper(\substr($line, 0, 6))) {
-                    $this->getOptions($line, $options);
-                    $tables[$tableName]['options'] = $options;
-                } elseif ('DEFAULT CHARSET ' === \mb_strtoupper(\substr($line, 0, 16))) {
-                    $this->getOptions($line, $options);
-                    $tables[$tableName]['options'] = $options;
-                } else {
-                    // get keys and fields
-                    switch (\mb_strtoupper(\substr($line, 0, 3))) {
-                        case 'KEY':
-                        case 'PRI':
-                        case 'UNI':
-                            $tables[$tableName]['keys'][] = $this->getKey($line);
-                            break;
-                        case 'else':
-                        default:
-                            $columns = $this->getColumns($line);
-                            $tables[$tableName]['columns'][] = $columns;
-                            break;
+            } else {
+                if (false == $skip) {
+                    if (')' === \mb_strtoupper(\substr($line, 0, 1))) {
+                        // end of table definition
+                        // get options
+                        $this->getOptions($line, $options);
+                        $tables[$tableName]['options'] = $options;
+                    } elseif ('ENGINE' === \mb_strtoupper(\substr($line, 0, 6))) {
+                        $this->getOptions($line, $options);
+                        $tables[$tableName]['options'] = $options;
+                    } elseif ('DEFAULT CHARSET ' === \mb_strtoupper(\substr($line, 0, 16))) {
+                        $this->getOptions($line, $options);
+                        $tables[$tableName]['options'] = $options;
+                    } else {
+                        // get keys and fields
+                        switch (\mb_strtoupper(\substr($line, 0, 3))) {
+                            case 'KEY':
+                            case 'PRI':
+                            case 'UNI':
+                                $tables[$tableName]['keys'][] = $this->getKey($line);
+                                break;
+                            case 'else':
+                            default:
+                                $columns = $this->getColumns($line);
+                                $tables[$tableName]['columns'][] = $columns;
+                                break;
+                        }
                     }
                 }
             }
@@ -161,8 +163,8 @@ class MigrateHelper
         }
 
         // create new file and write schema array into this file
-        $myfile = \fopen($this->fileYaml, 'wb');
-        if (false == $myfile || null === $myfile) {
+        $myfile = \fopen($this->fileYaml, "w");
+        if (false == $myfile || \is_null($myfile)) {
             \xoops_error('Error: Unable to open sql file!');
             return false;
         }
@@ -210,8 +212,11 @@ class MigrateHelper
         } else {
             return false;
         }
-        $attributes = \rtrim(\trim(\str_replace([$name, '`'], '', $line)), ',');
 
+        $attributes = \trim(\str_replace([$name, '`'], '', $line));
+        if (',' == \substr($attributes, - 1)) {
+            $attributes = substr($attributes, 0, strlen($attributes) - 1);
+        }
         $columns['name'] = $name;
         // update quotes
         if (\strpos($attributes, "''") > 0) {
@@ -258,7 +263,7 @@ class MigrateHelper
 
         if (\strpos($line, 'RIMARY') > 0) {
             $key['PRIMARY'] = [];
-            $fields = \substr($line, 13);
+            $fields = \substr($line, 13, \strlen($line) - 13);
             $key['PRIMARY']['columns'] = \str_replace(['`', '),', ')'], '', $fields);
             $key['PRIMARY']['unique'] = 'true';
         } else {
